--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
           server: ftp.64.20.39.203
           username: asaduzza
           password: ${{ secrets.ftp_password }}
-          server-dir: wplocationlogic.com/wp-content/plugins/
+          local_dir: "/wplocationlogic.com/wp-content/plugins/"
