--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@4.2.0
       with:
         server-dir: /home/asaduzza/wplocationlogic.com/wp-content/plugins/
-        server: ftp.samkirkland.com
+        server: ftp.64.20.39.203
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
         exclude: |
